--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,10 @@ name = "pypi"
 [packages]
 fastapi = "*"
 uvicorn = "*"
+python-dotenv = "*"
+sqlalchemy = "*"
+asyncpg = "*"
+greenlet = "*"
 
 [dev-packages]
 
