--- a/example.env
+++ b/example.env
@@ -1,4 +1,11 @@
+; Database
 DB_HOST=your_db_host
 DB_USERNAME=your_db_user
 DB_PASSWORD=your_db_password
 DB_NAME=your_db_name
+
+; Mother MQTT
+MQTT_ADDRESS=mqtt_address
+MQTT_PORT=mqtt_port
+MQTT_USERNAME=mqtt_username
+MQTT_PASSWORD=mqtt_password
